--- a/src/components/container.module.css
+++ b/src/components/container.module.css
@@ -1,4 +1,7 @@
 .container {
-  margin: 3rem auto;
+  margin: 3rem auto 0 auto;
   max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
