--- a/src/components/container.module.css
+++ b/src/components/container.module.css
@@ -3,6 +3,25 @@
   max-width: 600px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   min-height: 100%;
+  height: 100%;
+  padding: 0 2rem;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+}
+
+body > div > * {
   height: 100%;
 }
